[gd_scene load_steps=4 format=3 uid="uid://cjf2fexpo2u2"]

[ext_resource type="Script" path="res://ui/crafting/crafting_item.gd" id="1_xfuua"]
[ext_resource type="Texture2D" uid="uid://bpytuuc1jd0ok" path="res://scenes/objects/items/rock_on_stick.png" id="2_j6tkh"]
[ext_resource type="Texture2D" uid="uid://bbgjs1amp7uee" path="res://scenes/objects/items/twig.png" id="3_qyrw1"]

[node name="CraftingItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xfuua")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 109.0
offset_bottom = 18.0
color = Color(0, 0, 0, 0.12549)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 2

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Item" type="TextureRect" parent="ColorRect/MarginContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_j6tkh")
expand_mode = 3
stretch_mode = 4

[node name="Label" type="Label" parent="ColorRect/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Rock on Stick: "

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Ingredient1" type="TextureRect" parent="ColorRect/MarginContainer/CenterContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_qyrw1")
expand_mode = 3
stretch_mode = 4

[node name="Ingredient2" type="TextureRect" parent="ColorRect/MarginContainer/CenterContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_qyrw1")
expand_mode = 3
stretch_mode = 4

[node name="DelayTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[connection signal="mouse_entered" from="ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_color_rect_mouse_exited"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
